--- a/style.css
+++ b/style.css
@@ -12,36 +12,39 @@ header{
     background-color:#fff;   
 }
 
+#header-logo{
+    padding: 15px;
+}
 #logo{
-    padding: 20px;
+    height: 50px;
+    vertical-align: middle;
 }
 
-#title{
+#logo-title{
     font-weight: bold;
-    font-size: 40px;
     color: black;
-    vertical-align: auto;
+    font-size: 40px;
 }
 
 .container{
     width: 80%;
     margin: 0 auto;
-    margin-top: 5%;
     background-color: #fff;
     border-radius: 5px;
+    padding-top: 20px;
     padding-bottom:30px;
+}
+
+#top-container{
+    margin-top: 5%;
+    margin-bottom: 2px;
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .inside-container{
     width: 90%;
     margin: 0 auto;
-}
-
-#add-buttons{
-   padding-top: 20px;
-   padding-bottom: 20px;
-   border-bottom: 1px solid #aaa;
-
 }
 
 #add-task{
@@ -66,13 +69,11 @@ header{
     margin-bottom: 30px;
 }
 
-
-.check{
-    color: rgb(31, 177, 87);
-    border: 1px solid rgb(31, 177, 87);
-    border-radius: 50%;
-    padding: 3px;
+section p{
+    margin-top: 20px;
+    margin-bottom: 30px;
 }
+
 
 .editorial{
     background-color:rgb(15, 92, 180);
@@ -81,8 +82,6 @@ header{
     padding:8px 15px;
     border-radius: 10px;
 }
-
-
 
 .q1-goals{
     background-color:rgb(119, 53, 139);
@@ -123,9 +122,13 @@ header{
     padding:8px 15px;
     border-radius: 10px;
 }
-section p{
-    margin-top: 20px;
-    margin-bottom: 20px;
+
+/* Simboli check e x */
+.check{
+    color: rgb(31, 177, 87);
+    border: 1px solid rgb(31, 177, 87);
+    border-radius: 50%;
+    padding: 3px;
 }
 .uncheck{
     color: rgb(209, 40, 40);
