--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ header{
 #logo-title{
     font-weight: bold;
     color: black;
-    font-size: 40px;
+    font-size: 50px;
+    vertical-align: middle;
 }
 
 .container{
@@ -58,6 +59,7 @@ header{
 #add-section{
     background-color: rgb(255, 255, 255);
     color: #ccc;
+    border: 1px solid;
     border-color: #ccc;
     padding: 10px;
     border-radius: 5px;
@@ -74,6 +76,7 @@ section p{
     margin-bottom: 30px;
 }
 
+/* Tag colorati all'interno dei paragrafi */
 
 .editorial{
     background-color:rgb(15, 92, 180);
