--- a/style.css
+++ b/style.css
@@ -77,53 +77,38 @@ section p{
 }
 
 /* Tag colorati all'interno dei paragrafi */
-
-.editorial{
-    background-color:rgb(15, 92, 180);
+.tag{
     color: #fff;
     font-size: 10px;
     padding:8px 15px;
     border-radius: 10px;
+}
+
+.editorial{
+    background-color:rgb(15, 92, 180);    
 }
 
 .q1-goals{
     background-color:rgb(119, 53, 139);
-    color: #fff;
-    font-size: 10px;
-    padding:8px 15px;
-    border-radius: 10px;
+
 }
 
 .recruiting{
     background-color:rgb(66, 131, 101);
-    color: #fff;
-    font-size: 10px;
-    padding:8px 15px;
-    border-radius: 10px;
+    
 }
 
 .mobile{
     background-color:rgb(209, 138, 56);
-    color: #fff;
-    font-size: 10px;
-    padding:8px 15px;
-    border-radius: 10px;
 }
 
 .website{
     background-color:rgb(216, 88, 210);
-    color: #fff;
-    font-size: 10px;
-    padding:8px 15px;
-    border-radius: 10px;
 }
 
 .sales{
     background-color:rgb(153, 197, 117);
-    color: #fff;
-    font-size: 10px;
-    padding:8px 15px;
-    border-radius: 10px;
+ 
 }
 
 /* Simboli check e x */
